fixed issue with column gap in gallery for responsive

--- a/main.scss
+++ b/main.scss
@@ -325,7 +325,7 @@ header {
       transition: all 0.3s ease-in;
 
       &:hover {
-        transform: scale(1.05);
+        transform: scale(1.02);
         -webkit-box-shadow: 0px 3px 10px rgba(43, 199, 247, 0.692);
         box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.719);
       }
@@ -661,10 +661,11 @@ footer {
 
     .gallery-wrapper {
       column-gap: 10px;
+      row-gap: 10px;
 
       a {
         width: 280px;
-        height: 280p x;
+        height: 280px;
         margin: 10px 15px;
         img {
           width: 280px;
